test: all methods related to return value (src/test/java/typer/bible)